Fix gaps on side on mobile

--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ body {
   background-color: #222326;
   /* color: #99aab5; */
   color: white;
+  box-sizing: border-box;
 }
 
 p {
@@ -78,7 +79,7 @@ main {
   display: flex;
   flex-direction: column;
   min-height: 99vh;
-  max-width: 800px;
+  max-width: 600px;
   margin: 0 auto;
   /* padding: 20px; */
   justify-content: center;
@@ -87,12 +88,13 @@ main {
 
 main > div {
   margin: 0 auto;
-  width: 80%;
+  width: 100%;
   background-color: #2c2f33;
   /* border: 1px solid #99aab5; */
   border-radius: 12px;
   box-shadow: 0 5px 10px rgb(0 0 0 / 0.2);
   padding: 20px;
+  box-sizing: border-box;
 }
 
 main > div::before {
